--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -11,6 +11,8 @@ This project makes use of data from a personal activity monitoring device. This 
 
 ## Loading and preprocessing the data
 
+1 - Reading the data from the “activity.csv”
+
 
 
 ## What is mean total number of steps taken per day?
