--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -12,7 +12,9 @@ This project makes use of data from a personal activity monitoring device. This 
 ## Loading and preprocessing the data
 
 1 - Reading the data from the “activity.csv”
-
+```{
+data <- read.csv("activity.csv", header = TRUE, sep = ",", na.strings = "NA")
+}```
 
 
 ## What is mean total number of steps taken per day?
