--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -20,6 +20,15 @@ data <- read.csv("activity.csv", header = TRUE, sep = ",", na.strings = "NA")
 ```{r}
 summary(data)
 ```
+##      steps               date          interval   
+##  Min.   :  0.0   2012-10-01:  288   Min.   :   0  
+##  1st Qu.:  0.0   2012-10-02:  288   1st Qu.: 589  
+##  Median :  0.0   2012-10-03:  288   Median :1178  
+##  Mean   : 37.4   2012-10-04:  288   Mean   :1178  
+##  3rd Qu.: 12.0   2012-10-05:  288   3rd Qu.:1766  
+##  Max.   :806.0   2012-10-06:  288   Max.   :2355  
+##  NA's   :2304    (Other)   :15840
+
 ## What is mean total number of steps taken per day?
 
 
